crates/k-rust/tests/snapshots/inner_parser__scanner_uses_the_longest_regex_alternative.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\nab"
---
Ok(
    Apply {
        label: Label {
            name: "longestAlternative",
            parameters: [],
        },
        arguments: [],
    },
)
