crates/k-rust/tests/snapshots/inner_parser__uses_default_layout_when_layout_is_undeclared.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\n /* default */ x // tail"
---
Ok(
    Apply {
        label: Label {
            name: "x",
            parameters: [],
        },
        arguments: [],
    },
)
