crates/k-rust/tests/snapshots/inner_parser__uses_module_defined_layout.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\n~~ _ x~~~"
---
Ok(
    Apply {
        label: Label {
            name: "x",
            parameters: [],
        },
        arguments: [],
    },
)
